// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Map Popup FloatingCarEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-car_6861-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      MILES Car: 0541
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 hmUShj">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup FloatingVehicleEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-22bike_686122-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      BIKETOWN Free-floating bike: 0541
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 hmUShj">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StationEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-22hub_158022-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      BIKETOWN SW Morrison at 18th
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <div>
        Available bikes: 6
      </div>
      <div>
        Available docks: 11
      </div>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 hmUShj">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntity smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 jdXQjY">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 hmUShj">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;

exports[`Map Popup StopEntityNoHandlers smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      W Burnside &amp; SW 2nd
    </header>
  </div>
</div>
`;

exports[`Map Popup StopEntitywithEntityPrefix smoke-test 1`] = `
<div class="styled__MapOverlayPopup-sc-12kjso7-1 idXkMr">
  <div id="focus-9526-popup-focus-trap"
       role="presentation"
  >
    <header class="styled__PopupTitle-sc-12kjso7-3 cjkEhb">
      <span class="MapPopupstory__DemoIcon-sc-vlk9f0-0 eLlbsf">
        W
      </span>
      W Burnside &amp; SW 2nd
    </header>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Stop ID: 9526
      </strong>
      <button class="styled__ViewStopButton-sc-12v7ov3-0 jdXQjY">
        Stop Viewer
      </button>
    </p>
    <p class="styled__PopupRow-sc-12kjso7-2 gahTQU">
      <strong>
        Plan a trip:
      </strong>
      <span class="styled__FromToPickerSpan-sc-vb4790-1 hmUShj">
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 512 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__FromIcon-sc-n5xcvc-0 jTjMOf"
          >
            <path fill="currentColor"
                  d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            From here
          </button>
        </span>
        <span class="styled__LocationPickerSpan-sc-vb4790-0 gwsIFy">
          <svg viewbox="0 0 384 512"
               height="0.9em"
               width="0.9em"
               aria-hidden="true"
               focusable="false"
               fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
               class="StyledIconBase-ea9ulj-0 hPhvO styled__ToIcon-sc-n5xcvc-2 ipFnZE"
          >
            <path fill="currentColor"
                  d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
            >
            </path>
          </svg>
          <button class="styled__Button-sc-vb4790-2 hNNoVB">
            To here
          </button>
        </span>
      </span>
    </p>
  </div>
</div>
`;
